# Pro-HealthCare

./: .env.example  .gitignore  README.md  docker-compose.yml  ระบบกายภาพบำบัดผ่านเว็บแคม.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/agents/: __init__.py  ai_coach.py  reporter.py  vision_tracker.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: bd730a6b6b0c_initial_schema_9_tables.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  auth.py  exercises.py  plans.py  reports.py  sessions.py  sync.py  users.py
backend/app/core/: config.py  database.py  enums.py  security.py
backend/app/models/: __init__.py  base.py  clinical_report.py  exercise.py  exercise_plan.py  joint_angle.py  patient.py  session.py  user.py
backend/app/schemas/: __init__.py  auth.py  exercise.py  patient.py  plan.py  report.py  session.py  sync.py  user.py
backend/app/seeds/: seed_exercises.py
backend/tests/: conftest.py  test_auth.py  test_exercises.py  test_plans.py  test_sessions.py
frontend/: capacitor.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: AngleChart.tsx  Guards.tsx  Layout.tsx  SkeletonOverlay.tsx
frontend/src/pages/auth/: Login.tsx
frontend/src/pages/doctor/: Dashboard.tsx  PatientDetail.tsx
frontend/src/pages/patient/: Dashboard.tsx  (+2 more)
frontend/src/store/: auth.ts
frontend/src/types/: index.ts
scripts/: backend-down.ps1  backend-up.ps1
