[project]
name = "prohealthcare-backend"
version = "0.1.0"
description = "AI-Driven Home Rehabilitation & Physical Therapy Tracker — FastAPI backend"
requires-python = ">=3.11,<3.13"
readme = "README.md"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.30",
    "pymysql>=1.1.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.1",
    "python-multipart>=0.0.9",
    "email-validator>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
]
# Phase 2 (Agentic AI) — จะเปิดใช้ใน Step 3
agents = [
    "mediapipe>=0.10.14",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "numpy>=1.26.0",
    "reportlab>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
